# pypspline3

./: .gitignore  README.md  meson.build  pyproject.toml
demo/: demo_pspline_3d.py
src/: meson.build
src/fpspline/: meson.build  run_f2py_simple.py
src/pypspline3/: meson.build  pspline_1d.py  pspline_2d.py  pspline_3d.py
test/: test_genxpkg.py
